--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,29 @@
 <%- include ('partials/header.ejs') %>
 
+<% const toPascalCase = str => (str.match(/[a-zA-Z0-9]+/g) || []).map(w => `${w.charAt(0).toUpperCase()}${w.slice(1)}`).join(''); %>
+
 <body>
-	<div class="container">
-    <div class="d-flex flex-column justify-content-center align-items-center">
+	<div class="puff-in-center container d-flex flex-column justify-content-center align-items-center">
+    <div class="d-flex content flex-column justify-content-center align-items-center">
+		<img src="<%= user.foto %>" alt="imagem de perfil" class="profile-image bg-info rounded-circle"/>			
+		
 		<h1><%= user.username %></h1>
+
     	<% if (user.subtitulo) { %>
       		<h3><%= user.subtitulo %></h2>
 		<% } %>
+		
 		<% if (user.descricao) { %>
 			<p><%= user.descricao %></p>
 		<% } %>
     </div>
 
-	<div class="d-flex gap-1 flex-column justify-content-center align-items-center">
-	<% user.links.forEach(link =>{ %>
-		<a class="btn w-50 <%= link.tipo %>" href="<%= link.url %>" target="_blank"><%= link.tipo.toLowerCase() %></a>
+	<div class="d-flex content gap-1 flex-column justify-content-center align-items-center">
+	<% user.links.forEach( (link, index) =>{ %>
+		<a tabindex="<%= index+1 %>" class="btn <%= link.tipo.toLowerCase() %>" href="<%= link.url %>" target="_blank">
+			<img src="<%= `/icons/${link.tipo.toLowerCase()}.png` %>" alt="">
+			<%= toPascalCase(link.tipo.toLowerCase()) %>
+		</a>
 	<% }) %>
 	<div />
 
