--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
+
 .puff-in-center {
 	-webkit-animation: puff-in-center 1s cubic-bezier(0.47, 0, 0.745, 0.715) both;
 	animation: puff-in-center 1s cubic-bezier(0.47, 0, 0.745, 0.715) both;
@@ -47,6 +49,20 @@
 	}
 }
 
+html,
+body {
+	min-width: 100%;
+	min-height: 100%;
+	background-color: initial;
+	font-family: "Archivo", sans-serif;
+}
+html{
+	background-image: linear-gradient(to bottom, #00f59b 0%, #7014f2 100%);
+}
+* {
+	box-sizing: border-box;
+}
+
 p {
 	text-align: center;
 	max-width: 95%;
@@ -68,13 +84,20 @@ p {
 	align-items: center;
 	justify-content: center;
 	gap: 0.5rem;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	transition: transform 0.3s;
 	height: 3rem;
 	width: 100%;
 	img {
 		width: 2rem;
 	}
+
+	background: rgba( 255, 255, 255, 0.25 );
+	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+	backdrop-filter: blur( 1.5px );
+	-webkit-backdrop-filter: blur( 1.5px );
+	border-radius: 10px;
+	border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .btn:hover,
@@ -83,33 +106,8 @@ p {
 	transform: scale(1.025);
 }
 
-.github {
-	background-color: aqua;
-}
-.linkedin {
-	background-color: aquamarine;
-}
-.instagram {
-	background-color: blueviolet;
-}
-.twitch {
-	background-color: blue;
-}
-.youtube {
-	background-color: cadetblue;
-}
-.portfolio {
-	background-color: yellow;
-}
-.twitter {
-	background-color: yellowgreen;
-}
-.outros {
-	background-color: violet;
-}
-
 @media (max-width: 900px) {
 	.content {
-		width: 80%;
+		width: 90%;
 	}
 }
