--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,27 +4,27 @@
 
 <body>
 	<div class="puff-in-center container d-flex flex-column justify-content-center align-items-center">
-    <div class="d-flex content flex-column justify-content-center align-items-center">
-		<img src="<%= user.foto %>" alt="imagem de perfil" class="profile-image bg-info rounded-circle"/>			
-		
-		<h1><%= user.username %></h1>
+		<div class="d-flex content flex-column justify-content-center align-items-center">
+			<img src="<%= user.foto %>" alt="imagem de perfil" class="profile-image bg-info rounded-circle"/>			
+			
+			<h1><%= user.username %></h1>
 
-    	<% if (user.subtitulo) { %>
-      		<h3><%= user.subtitulo %></h2>
-		<% } %>
-		
-		<% if (user.descricao) { %>
-			<p><%= user.descricao %></p>
-		<% } %>
-    </div>
+			<% if (user.subtitulo) { %>
+				<h4><%= user.subtitulo %></h4>
+			<% } %>
+			
+			<% if (user.descricao) { %>
+				<p><%= user.descricao %></p>
+			<% } %>
+		</div>
 
 	<div class="d-flex content gap-1 flex-column justify-content-center align-items-center">
-	<% user.links.forEach( (link, index) =>{ %>
-		<a tabindex="<%= index+1 %>" class="btn <%= link.tipo.toLowerCase() %>" href="<%= link.url %>" target="_blank">
-			<img src="<%= `/icons/${link.tipo.toLowerCase()}.png` %>" alt="">
-			<%= toPascalCase(link.tipo.toLowerCase()) %>
-		</a>
-	<% }) %>
+		<% user.links.forEach( (link, index) =>{ %>
+			<a tabindex="<%= index+1 %>" class="btn <%= link.tipo.toLowerCase() %>" href="<%= link.url %>" target="_blank">
+				<!-- <img src="<%= `/icons/${link.tipo.toLowerCase()}.png` %>" alt=""> -->
+				<%= toPascalCase(link.tipo.toLowerCase()) %>
+			</a>
+		<% }) %>
 	<div />
 
 	</div>
